Fix waving animation and add hello waving

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico" />
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-
 <body>
     <main>
         <div class="content">
             <div class="bg-animation"></div>
             <div class="img-container">
                 <img src="images/photo.png" width=300 height=300>
-                <div class="status"><span class="waving-emoji">👋🏼</span></div>
+                <div class="status"><span class="waving-emoji hello-waving">👋🏼</span></div>
             </div>
 
             <br><br>
@@ -65,5 +64,6 @@
         </div>
     </main>
 </body>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="scripts/index.js"></script> 
 </html>
