--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="language" content="en">
-    <meta name="keywords" content="Leo Kraft , Leo, Kraft , KIT , Karlsruher Institut für Technologie">
+    <meta name="keywords" content="Leo Kraft, KIT, Karlsruher Institut für Technologie, Computer Science, Electrical Engineering">
+    <meta name="description" content="A Computer Science and Electrical Engineering student at KIT.">
+    <meta name="author" content="Leo Kraft">
+
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Leo Kraft</title>
+
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico" />
     <link rel="stylesheet" href="styles/styles.css">
 </head>
