Improve images and icons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="language" content="en">
-    <meta name="keywords" content="Leo Kraft, KIT, Karlsruher Institut für Technologie, Computer Science, Electrical Engineering">
+    <meta name="keywords"
+        content="Leo Kraft, KIT, Karlsruher Institut für Technologie, Computer Science, Electrical Engineering">
     <meta name="description" content="A Computer Science and Electrical Engineering student at KIT.">
     <meta name="author" content="Leo Kraft">
 
@@ -23,7 +24,13 @@
         <div class="content">
             <div class="bg-animation"></div>
             <div class="img-container">
-                <img src="images/photo.png" width=300 height=300>
+                <img src="images/photo_l.png"
+                    srcset="images/photo_s.png 300w, 
+                            images/photo_m.png 600w, 
+                            images/photo_l.png 900w, 
+                            images/photo_xl.png 1200w"
+                    sizes="300px"
+                    width=300 height=300>
                 <div class="status"><span class="waving-emoji hello-waving">👋🏼</span></div>
             </div>
 
@@ -60,13 +67,13 @@
                 <div>
                     <a class="social-icon" title="Twitter" href="https://twitter.com/LeoKraft_" target="_blank"
                         rel="noopener">
-                        <img src="https://img.icons8.com/color/48/000000/twitter--v1.png" />
+                        <img width="48" height="48" src="https://img.icons8.com/color/48/000000/twitter--v1.png" />
                     </a>
                 </div>
                 <div>
                     <a class="social-icon" title="LinkedIn" href="https://www.linkedin.com/in/leo-kraft/"
                         target="_blank" rel="noopener">
-                        <img src="https://img.icons8.com/color/48/000000/linkedin.png" />
+                        <img width="48" height="48" src="https://img.icons8.com/color/48/000000/linkedin.png" />
                     </a>
                 </div>
             </div>
