Change image support to resolution dependant sizes

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <div class="bg-animation"></div>
             <div class="img-container">
                 <img src="images/photo_l.png"
-                    srcset="images/photo_s.png 300w, 
-                            images/photo_m.png 600w, 
-                            images/photo_l.png 900w, 
-                            images/photo_xl.png 1200w"
-                    sizes="300px"
+                    srcset="images/photo_s.png 1x, 
+                            images/photo_sm.png 1.5x, 
+                            images/photo_m.png 2x, 
+                            images/photo_l.png 3x, 
+                            images/photo_xl.png 4x"
                     width=300 height=300>
                 <div class="status"><span class="waving-emoji hello-waving">👋🏼</span></div>
             </div>
