--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="language" content="en">
     <meta name="keywords"
-        content="Leo Kraft, KIT, Karlsruher Institut für Technologie, Computer Science, Electrical Engineering">
-    <meta name="description" content="A Computer Science and Electrical Engineering student at KIT.">
+        content="Leo Kraft, TUM, Technical University of Munich, Robotics, Cognition, Intelligence, Machine Learning">
+    <meta name="description" content="A &quot;Robotics, Cognition, Intelligence&quot; masters student at TUM.">
     <meta name="author" content="Leo Kraft">
 
 
@@ -40,8 +40,8 @@
             <span class="github-handle">@leokraft</span>
 
             <h2>
-                I am a Computer Science and Electrical Engineering student <a class="inline-link"
-                    href="https://www.kit.edu" target="_blank" rel="noopener">@KIT</a> in Germany.
+                I am a Robotics, Cognition, Intelligence student <a class="inline-link"
+                    href="https://www.tum.de/" target="_blank" rel="noopener">@TUM</a> in Germany.
             </h2>
 
             <div class="social-icons">
